# Blinnphong

./: Blinnphong.sln  Blinnphong.vcxproj  Blinnphong.vcxproj.filters  CMakeLists.txt  Desktop - Shortcut (2).lnk  Desktop - Shortcut.lnk  README.md  camera.cpp  camera.h  deer.mtl  fragment_shader.glsl  imgui.ini  light_fs.glsl  light_main.cpp  light_vs.glsl  main.cpp  main2.cpp  mesh.cpp  mesh.h  model.cpp  model.h  mouse.cpp  mouse.h  processInput.cpp  shader.h  shaderclass.cpp  stb.cpp  vertex_shader.glsl
assets/: cartutorial.mtl  castle.fbx
assets/Scene/: opengl.mtl
shaders/: fragment_shader.glsl  lightcube_fs.glsl
src/: imgui.ini
